--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon --delay 2 app.js"
+    "start": "nodemon --delay 2 app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "*",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.9"
   }
 }
