--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^3.4.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
