--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --delay 1 app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +16,6 @@
     "express": "^4.17.1",
     "fs": "*",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.9",
     "request": "^2.88.2"
   }
 }
