--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "chart.js": "^3.4.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
