--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "jest",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,11 @@
     "express": "^4.17.1",
     "fs": "*",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3"
   }
 }
